--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     },
     "require": {
         "php": ">=5.6",
-        "xiaolin/enum": "^0.2.1"
+        "xiaolin/enum": "^0.2.1",
+        "xiaolin/swoole-queue": "^0.3.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6"
