--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "xiaolin/swoole-queue": "^0.3.1"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=5.6"
+        "phpunit/phpunit": ">=5.6",
+        "symfony/var-dumper": "^4.1"
     }
 }
