--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "php": ">=5.6",
         "xiaolin/enum": "^0.2.1",
-        "xiaolin/swoole-queue": "^0.3.1"
+        "xiaolin/swoole-queue": "^0.3.1",
+        "symfony/console": "^4.1"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6",
