--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,19 @@
         "php": ">=5.6",
         "xiaolin/enum": "^0.2.1",
         "xiaolin/swoole-queue": "^0.3.1",
-        "symfony/console": "^4.1"
+        "symfony/console": "^4.1",
+        "ext-yaf": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": ">=5.6",
-        "symfony/var-dumper": "^4.1"
+        "symfony/var-dumper": "^4.1",
+        "mockery/mockery": "^1.2",
+        "filp/whoops": "^2.3",
+        "friendsofphp/php-cs-fixer": "^2.13",
+        "squizlabs/php_codesniffer": "^3.3",
+        "phpmd/phpmd": "^2.6",
+        "sebastian/phpcpd": "^4.1",
+        "sebastian/phpdcd": "^1.0",
+        "overtrue/phplint": "^1.1"
     }
 }
