--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Tests\\": "tests/",
+            "Application\\Commands\\": "application/Commands"
         }
     },
     "require": {
